; ModuleID = '/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_edac_mc_sysfs.c_csrowdev_store.c'
source_filename = "/home/carl/AnghaBench/fastsocket/kernel/drivers/edac/extr_edac_mc_sysfs.c_csrowdev_store.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.kobject = type { i32 }
%struct.attribute = type { i32 }
%struct.csrow_info = type { i32 }
%struct.csrowdev_attribute = type { i32, i32 (%struct.csrow_info.0*, i8*, i64, i32)* }
%struct.csrow_info.0 = type opaque

@EIO = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.kobject*, %struct.attribute*, i8*, i64)* @csrowdev_store to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @csrowdev_store(%struct.kobject* %0, %struct.attribute* %1, i8* %2, i64 %3) #0 {
  %5 = alloca i32, align 4
  %6 = alloca %struct.kobject*, align 8
  %7 = alloca %struct.attribute*, align 8
  %8 = alloca i8*, align 8
  %9 = alloca i64, align 8
  %10 = alloca %struct.csrow_info*, align 8
  %11 = alloca %struct.csrowdev_attribute*, align 8
  store %struct.kobject* %0, %struct.kobject** %6, align 8
  store %struct.attribute* %1, %struct.attribute** %7, align 8
  store i8* %2, i8** %8, align 8
  store i64 %3, i64* %9, align 8
  %12 = load %struct.kobject*, %struct.kobject** %6, align 8
  %13 = call %struct.csrow_info* @to_csrow(%struct.kobject* %12)
  store %struct.csrow_info* %13, %struct.csrow_info** %10, align 8
  %14 = load %struct.attribute*, %struct.attribute** %7, align 8
  %15 = call %struct.csrowdev_attribute* @to_csrowdev_attr(%struct.attribute* %14)
  store %struct.csrowdev_attribute* %15, %struct.csrowdev_attribute** %11, align 8
  %16 = load %struct.csrowdev_attribute*, %struct.csrowdev_attribute** %11, align 8
  %17 = getelementptr inbounds %struct.csrowdev_attribute, %struct.csrowdev_attribute* %16, i32 0, i32 1
  %18 = load i32 (%struct.csrow_info.0*, i8*, i64, i32)*, i32 (%struct.csrow_info.0*, i8*, i64, i32)** %17, align 8
  %19 = icmp ne i32 (%struct.csrow_info.0*, i8*, i64, i32)* %18, null
  br i1 %19, label %20, label %32

20:                                               ; preds = %4
  %21 = load %struct.csrowdev_attribute*, %struct.csrowdev_attribute** %11, align 8
  %22 = getelementptr inbounds %struct.csrowdev_attribute, %struct.csrowdev_attribute* %21, i32 0, i32 1
  %23 = load i32 (%struct.csrow_info.0*, i8*, i64, i32)*, i32 (%struct.csrow_info.0*, i8*, i64, i32)** %22, align 8
  %24 = load %struct.csrow_info*, %struct.csrow_info** %10, align 8
  %25 = bitcast %struct.csrow_info* %24 to %struct.csrow_info.0*
  %26 = load i8*, i8** %8, align 8
  %27 = load i64, i64* %9, align 8
  %28 = load %struct.csrowdev_attribute*, %struct.csrowdev_attribute** %11, align 8
  %29 = getelementptr inbounds %struct.csrowdev_attribute, %struct.csrowdev_attribute* %28, i32 0, i32 0
  %30 = load i32, i32* %29, align 8
  %31 = call i32 %23(%struct.csrow_info.0* %25, i8* %26, i64 %27, i32 %30)
  store i32 %31, i32* %5, align 4
  br label %35

32:                                               ; preds = %4
  %33 = load i32, i32* @EIO, align 4
  %34 = sub nsw i32 0, %33
  store i32 %34, i32* %5, align 4
  br label %35

35:                                               ; preds = %32, %20
  %36 = load i32, i32* %5, align 4
  ret i32 %36
}

declare dso_local %struct.csrow_info* @to_csrow(%struct.kobject*) #1

declare dso_local %struct.csrowdev_attribute* @to_csrowdev_attr(%struct.attribute*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
